# tapasco

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.sbt  chiselSetup.sh  gitlab-ci-base.yml  setup.sh
arch/axi4mm/: CMakeLists.txt  axi4mm.tcl
arch/axi4mm/plugins/: debug.tcl
arch/axi4mm/src/: tapasco_address_map.c  tapasco_device.c
arch/common/: arch.tcl
arch/common/include/: tapasco.h  tapasco_address_map.h  tapasco_status.h
arch/common/src/: tapasco_functions.c  tapasco_scheduler.c
axi/: .gitignore  build.sbt
axi/packaging/: build.sbt
axi/vivado/: AxiFifoAdapter_TestSetup.tcl  generate_preload.c
common/: common.tcl  common_2016.4.tcl  common_2017.1.tcl  common_2017.2.tcl  common_ip.tcl  design.master.tcl.template  evaluate_ip.tcl.template  ip.tcl  subsystem.tcl
common/include/: gen_mem.h
common/interfaces/tapasco_clocks_resets/: tapasco_clocks_resets.xml  tapasco_clocks_resets_rtl.xml
common/interfaces/tapasco_clocks_resets/master_bridge/: component.xml  master_bridge.v
common/interfaces/tapasco_clocks_resets/slave_bridge/: component.xml  slave_bridge.v
common/ip/dual_dma/: dual_dma.xdc
common/ip/tapasco_status/: .gitignore  .gitlab-ci.yml  README.md  build.sbt  chiselSetup.sh  example.json
common/ip/tapasco_status/axi/: build.sbt
common/ip/tapasco_status_1.2/: component.xml
common/ip/tapasco_status_1.2/hdl/: gen.py  tapasco_status_v1_2.v  tapasco_status_v1_2_S00_AXI.v
common/ip/tapasco_status_1.2/xgui/: tapasco_status_v1_2.tcl
documentation/: pe-local-memories.md
examples/memcheck/: CMakeLists.txt
miscutils/: build.sbt
miscutils/src/main/scala/: DataWidthConverter.scala  DecoupledDataSource.scala  SignalGenerator.scala
miscutils/src/test/scala/: DataWidthConverterSuiteFullSpeed.scala  DecoupledDataSourceSuite.scala  SignalGeneratorTest.scala
platform/aspin/: aspin.tcl  platform.json
platform/aspin/plugins/: i2c_clk.tcl
platform/common/: platform.tcl
platform/pynq/: pynq.tcl
platform/pynq/plugins/: leds.tcl
platform/vc709/: vc709.tcl
platform/vc709/module/: bit_reload.sh  char_device_dma.c  char_device_dma.h
platform/vc709/plugins/: blue-dma.tcl  debug.tcl  dual-dma.tcl  leds.tcl  msix-intr-ctrl.tcl
platform/vc709/src/: platform_vc709.cpp
platform/zc706/plugins/: fancontrol.tcl
platform/zedboard/plugins/: oled.tcl
platform/zynq/: zynq.tcl
platform/zynq/plugins/: debug.tcl
runtime/examples/arraysum/: CMakeLists.txt  arraysum-example-mt.c  arraysum-mt.c
runtime/examples/memorybenchseq/: CMakeLists.txt  memorybenchseq-example-mt.c  memorybenchseq-example.c
src/main/resources/: logback-test.xml
src/main/scala/: AXIDefs.scala  AxiConfiguration.scala  AxiFifoAdapter.scala  AxiModuleBuilder.scala  AxiMux.scala  AxiSlidingWindow.scala  Builder.scala  CoreDefinition.scala  DataWidthConverter.scala  DecoupledDataSource.scala  FifoAxiAdapter.scala  Logging.scala  ModuleBuilder.scala  SignalGenerator.scala  json.scala  miscutils  package.scala  packaging
src/test/scala/: Axi2AxiSuite.scala  Axi4LiteProgrammableMaster.scala  Axi4LiteRegisterFileSuite.scala  AxiFifoAdapterSuite.scala  AxiMuxSuite.scala  AxiSlaveModel.scala  AxiSlaveModelConfiguration.scala  AxiSlaveModelDumper.scala  AxiSlidingWindowSuite.scala  DataWidthConverterCorrectnessSpec.scala  DataWidthConverterSuite.scala  DataWidthConverterSuiteCorrectness.scala  DataWidthConverterSuiteFullSpeed.scala  DecoupledDataSourceSpec.scala  DecoupledDataSourceSuite.scala  FifoAxiAdapterSuite.scala  JsonSpec.scala  SignalGeneratorSpec.scala  SignalGeneratorTest.scala  SlowQueue.scala  generators.scala
toolflow/vivado/common/: common_ip.tcl  create_ila.tmp.tcl  design.master.tcl.template  ip.tcl  sourceips.tmp.tcl
vivado/: AxiFifoAdapter_tb.v
(+129 files in other folders)
